[bumpversion]
current_version = 0.0.7
commit = True
tag = True

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
ignore = E501, W503
max-line-length = 100

[versioneer]
VCS = git
style = pep440
versionfile_source = psplay/_version.py
versionfile_build = psplay/_version.py
tag_prefix = v
parentdir_prefix = psplay-
